update documentation and simplify detector